-----------------------------------------------------------------------
*** ecasound - changes and additions to libecasound interface       ***
-----------------------------------------------------------------------

2000-06-12  Kai Vehmanen <kaiv@wakkanet.fi>

	* eca-chain.h (connected_input, connected_output): added
	
2000-06-11  Kai Vehmanen <kaiv@wakkanet.fi>	

	* audioio.h (samples_available,supported_io_modes): added
	* audioio-mp3.h (default cmds): new more generic interface
	* eca-control*.h (all): files and classes renamed;
	ECA_CONTROLLER* -> ECA_CONTROL*
	* eca-chainsetup-position.h (all): file and class renamed;
	ECA_CONTROLLER_POSITION -> ECA_CHAINSETUP_POSITION
	* eca-control-objects.h (chainsetup_names,chain_names): added
	* eca-control-objects.h (get_controller, remove_controller): added
	* eca-control-objects.h (get_chain,select_chain): added
	* eca-session.h (chainsetup_names): added
	* eca-audio-objects.h (chain_names): added
	* eca-chain.h (remove_controller): added

2000-06-10  Jeremy Hall <jhall@uu.net>

	* audioio-alsa3.h (all): added
	
2000-06-06  Kai Vehmanen <kaiv@wakkanet.fi>	

	* library version changed to 6:0:0
	* development of ecasound 1.8.x started
	* moved all files from src/ and include/ subdirs to the same 
	directory (top-level libecasound dir)
	* audioio.h (enum Io_type): replaces the unnamed enums
	
2000-05-29  Kai Vehmanen <kaiv@wakkanet.fi>	

	* audiofx_reverb.h: a new file containing more advanced 
	reverb effects
	
2000-05-21  Kai Vehmanen <kaiv@wakkanet.fi>

	* library version changed to 6:0:1
	* audiofx_ladspa.h (unique_number): added
	* eca-ladspa-plugin-map.h (object, register_object): new
	overloaded versions
	
2000-05-02  Kai Vehmanen <kaiv@wakkanet.fi>

	* library version 5:0:0 frozen
	
2000-04-26  Kai Vehmanen <kaiv@wakkanet.fi>

	* eca-chain.h (selected_target): added
	
2000-04-15  Kai Vehmanen <kaiv@wakkanet.fi>

	* eca-controller-objects.h (set_default_audio_format): signature
	changed