@@ -2,6 +2,11 @@
 *** ecasound - changes and additions to libecasound interface       ***
 -----------------------------------------------------------------------
 
+2000-06-18  Kai Vehmanen <kaiv@wakkanet.fi>
+
+	* audioio-alsa*.h (all): renamed all ALSA_PCMx_DEVICE classes
+	to ALSA_PCM_DEVICE
+	
 2000-06-12  Kai Vehmanen <kaiv@wakkanet.fi>
 
 	* eca-chain.h (connected_input, connected_output): added
